<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <!--Map-->
    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mapbox_cameraTargetLat="40.7128"
        app:mapbox_cameraTargetLng="-74.0060"
        app:mapbox_cameraZoom="9.0"
        />

    <RelativeLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:background="@color/white"
        tools:visibility="gone"
        >


        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:minHeight="48dp"
            android:text="@string/start"
            android:textColor="@color/white" />
    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sec_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="-60dp"
        tools:layout_editor_absoluteY="-111dp"
        tools:visibility="visible">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="77dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="35dp"
                android:backgroundTint="@color/grey"
                android:drawableLeft="@drawable/ic_check"
                android:text="@string/valider"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="90dp"
                android:drawableLeft="@drawable/ic_add_location"
                android:minHeight="48dp"

                android:text="@string/draw"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="77dp"
                android:layout_marginBottom="35dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_replay"
                android:text="@string/recommencer"
                android:textColor="@color/black" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>